--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,91 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/donate.css">
 </head>
+
 <body>
-    
+    <header>
+        <section class="lets-help-section">
+            <h1 class="donation-title">Let’s Help Those Who Are More In Need</h1>
+            <p class="donation-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <button class="btn-primary">Donate Now</button>
+        </section>
+        <section class="donate-today-section">
+            <h2 class="second-donation-title">Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <ul class="donation-amount">
+                <li>100TK</li>
+                <li>500TK</li>
+                <li>1000TK</li>
+                <li>2000TK</li>
+                <li>5000TK</li>
+            </ul>
+            <p class="other-amount">Other Amount (Taka)</p><hr>
+            <button class="btn-primary">Donate Now</button>
+        </section>
+    </header>
+    <main>
+      <section class="donation-plane-section">
+          <!-- our donation plane section -->
+          <h3 class="donation-plane-title">Our Donate Plan</h3>
+          <p class="donation-plane-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+          <div class="plane-cards">
+            <div class="plane-card">
+                <img src="icons/food.png" alt="">
+                <h3 class="card-title">Food for a family</h3>
+                <p class="card-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="plane-card">
+                <img src="icons/medicine.svg" alt="">
+                <h3 class="card-title">Medicine for a family</h3>
+                <p class="card-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+            <div class="plane-card">
+                <img src="icons/shelter.png" alt="">
+                <h3 class="card-title">Shelter for a family</h3>
+                <p class="card-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            </div>
+          </div>
+
+      </section>
+      <section class="dependence-section">
+        <div class="depend-text">
+            <h2 class="depend-title">Their lives depend on your donation</h2>
+            <p class="depend-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="depend-sub-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button class="btn-primary">How to Contribute?</button>
+        </div>
+        <div class="">
+            <img src="images/donation13.jpg" alt="">
+        </div>
+      </section>
+      <section class="survive-section">
+        <div class="">
+            <img src="images/donation11.jpg" alt="">
+        </div>
+        <div class="survive-text">
+            <h2 class="survive-title">They need us to survive</h2>
+            <p class="survive-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p class="survive-sub-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button class="btn-primary">How to Contribute?</button>
+        </div>
+      </section>
+      <section class="update-section">
+        <h2 class="update-title">Get My Updates</h2>
+        <p class="update-text">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        <div class="subscribe">
+            <div>
+                <input type="email" placeholder="email">
+            </div>
+            <div>
+                <button class="">subscribe</button>
+            </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+        <h2 class="lobster">Be Humble</h2>
+        <p>I am gonna do it</p>
+    </footer>
 </body>
+
 </html>
